# opendlv-sim-can-rhino

./: .docker-compose.yml.swp  CMakeLists.txt  Dockerfile  Dockerfile.amd64  README.md  circle.m  circle_tube.m  docker-compose.yml  plot_C.m  tempfile.txt
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
src/: .actual_control.cpp.swp  L_f_L_f_h_ang_Ccode.cpp  L_f_L_f_h_ang_Ccode.h  L_f_L_f_h_ang_Ccode_initialize.cpp  L_f_L_f_h_ang_Ccode_initialize.h  L_f_L_f_h_ang_Ccode_rtw.mk  L_f_L_f_h_ang_Ccode_terminate.cpp  L_f_L_f_h_ang_Ccode_terminate.h  L_f_L_f_h_ang_Ccode_types.h  WGS84toCartesian.hpp  actual_control.cpp  buildInfo.mat  can_interface.cpp  cluon-complete-v0.0.100.hpp  codeInfo.mat  constraint_obstacles_dynamics_complex.cpp  data_structure.hpp  data_to_save.txt  dynamics_vehicle.cpp  dynamics_vehicle.h  gcGuiReport.mat  message_sender.cpp  ob_traj.cpp  opendlv-logic-control-speed.cpp  opendlv-sim-can-rhino.cpp  opendlv-standard-message-set.hpp  opendlv.odvd  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  safety_certificate_complex.cpp  virtual_control.cpp
src/Matlab/: bicycle_sim.m  constraint_obstacles_dynamics_complex.m  constraint_obstacles_dynamics_complex.prj  constraint_obstacles_dynamics_complex_ccode.m  constraint_obstacles_dynamics_complex_ccode.prj  constraint_obstacles_dynamics_complex_ccode_mex.mexa64  data_model_state.txt  data_model_state_25917945777.txt  data_model_state_25917952799.txt  data_model_state_26147825144.txt  data_msg_actual_u.txt  data_msg_actual_u_25917945784.txt  data_msg_actual_u_25917952806.txt  data_msg_actual_u_26147825148.txt  data_msg_nom_u.txt  data_msg_nom_u_25917945782.txt  data_msg_nom_u_25917952807.txt  data_msg_nom_u_26147825148.txt  data_nominal_states.txt  data_nominal_states_25917945765.txt  data_nominal_states_25917952788.txt  data_nominal_states_26147825142.txt  data_ref_traj.txt  data_ref_traj_25917945782.txt  data_ref_traj_25917952807.txt  data_ref_traj_26147825148.txt  data_safety_certificate.txt  data_safety_certificate26147825148.txt  data_traj_ob.txt  data_traj_ob_25917945782.txt  data_traj_ob_25917952807.txt  data_traj_ob_26147825148.txt  generate_init_ob.m  global_variables.m  ob_traj.m  plot_C.m  safety_certificate_complex.m  self_solverdynamics.m  test_qpsolver.m  test_qpsolver.m~  (+2 more)
src/Matlab/codegen/lib/constraint_obstacles_dynamics_complex/: gcGuiReport.mat
src/Matlab/codegen/lib/constraint_obstacles_dynamics_complex/html/: constraint_obstacles_dynamics_complex1_mcode.html  constraint_obstacles_dynamics_complex1_watch.html  exported_values.mat  index.html
src/Matlab/codegen/lib/constraint_obstacles_dynamics_complex_ccode/: gcGuiReport.mat
src/Matlab/codegen/lib/constraint_obstacles_dynamics_complex_ccode/html/: constraint_obstacles_dynamics_complex_ccode1_mcode.html  constraint_obstacles_dynamics_complex_ccode1_watch.html  exported_values.mat  index.html
src/Matlab/codegen/mex/constraint_obstacles_dynamics_complex_ccode/: cfiGuiReport.mat
src/Matlab/codegen/mex/constraint_obstacles_dynamics_complex_ccode/html/: constraint_obstacles_dynamics_complex_ccode1_mcode.html  constraint_obstacles_dynamics_complex_ccode1_watch.html  exported_values.mat  index.html
src/Matlab/test_data_20190412/: Lan_change.fig  clock_wise_circle.fig  clock_wise_circle_pos.fig  counter_clock_wise.fig  counter_clock_wise_circle_pos.fig  lane_change.fig  snake.fig  snake_pos.fig  strait_line1.fig  strait_line1_pos.fig  strait_line2.fig  strait_line2_pos.fig  strait_line3.fig  strait_line3_pos.fig  strait_line4.fig  strait_line4_pos.fig
src/examples/: main.cpp  main.h
src/html/: L_f_L_f_h_ang_Ccode1_mcode.html  L_f_L_f_h_ang_Ccode1_watch.html  L_f_L_f_h_ang_Ccode_buildlog1.html  L_f_L_f_h_ang_Ccode_buildlog4.html  L_f_L_f_h_ang_Ccode_cpp.html  L_f_L_f_h_ang_Ccode_h.html  L_f_L_f_h_ang_Ccode_initialize_cpp.html  L_f_L_f_h_ang_Ccode_initialize_h.html  L_f_L_f_h_ang_Ccode_terminate_cpp.html  L_f_L_f_h_ang_Ccode_terminate_h.html  L_f_L_f_h_ang_Ccode_types_h.html  exported_values.mat  index.html  metrics.html  rtGetInf_cpp.html  rtGetInf_h.html  rtGetNaN_cpp.html  rtGetNaN_h.html  rt_nonfinite_cpp.html  rt_nonfinite_h.html  rtwtypes_h.html
src/interface/: _coder_L_f_L_f_h_ang_Ccode_api.c  _coder_L_f_L_f_h_ang_Ccode_api.h  _coder_L_f_L_f_h_ang_Ccode_info.c  _coder_L_f_L_f_h_ang_Ccode_info.h  _coder_L_f_L_f_h_ang_Ccode_mex.cpp  _coder_L_f_L_f_h_ang_Ccode_mex.h
src/qpOASES/: BLASReplacement.cpp  LAPACKReplacement.cpp  Matrices.cpp  OQPinterface.cpp  QProblem.cpp  QProblemB.cpp  SQProblem.cpp  SQProblemSchur.cpp  SolutionAnalysis.cpp  SparseSolver.cpp  Utils.cpp  qpOASES.hpp
